- [add] tool tips add to fields and options in the linearity form
- [add] many tool tips added to DSP setup form
- [change] exporting a tx profile will now ask for destination location and filename. It will complain if filename already exists
- [change] restored step attenuator RX1 if HERMES is used. Unsure why I disabled it a few years ago
- [fix] mic disable/enable button on front end will now disable the mic at startup if set as off. Note: its state is saved as part of the tx profile
- [fix] fixed rare out of bounds issue in memory ScheduleUpdate
- [fix] cat IF command fix where an error (O;) message would be returned if an unsupported TuneStep was in use. This bug has existed since 25/02/2007
- [fix] mode buttons when in collapsed mode should now work again when Thetis is first launched

## v2.10.3.8 - Change Log
- [fix] maintain delta checkbox now greyed if adjust min to noise floor is unchecked
- [fix] filter view now updates when zzfl etc cat commands are used
- [fix] refactored waterfall colour min/max for filterview. Fixes issues with high AGC offsets
- [fix] rx2 containers will not show if rx2 is disabled and the console window is restored from a minimised state
- [fix] fixed issue with DB manager, wher dbman.json would not be loaded correctly if a radio model was added/removed from the code. Now defaults to HERMES if model not found, ie HL2
- [fix] vac tx gains are min/max validated. To prevent crash/error with the HL2 modified version that is able to assign mic gain to tx vac gain
- [fix] fixed vfoB frequency limit issue and potential crash issue when using xvtr slot vhf0

## v2.10.3.7 Change Log
- [add] new auto attenuate TX when PS is off options in Setup->Ant/Filters->Antenna
- [add] new auto attenuate RX options in Setup->General->Options-1. If the undo option is used the attenuation will be unwound in the order originally applied after each delay period